# tail

./: Cargo.toml  config.toml  test.txt
objects/: rootlogs.json  rootlogs_dqm.json  rootlogs_fomis.json
src/: action.rs  applog.rs  config.rs  error.rs  http.rs  http_data.rs  logtyp.rs  main.rs  opl_typ.rs  oplapp.rs  oplcmd.rs  opldate.rs  opltyp.rs  parse.rs  rootlogs.rs  term.rs
