[package]
name = "tail"
version = "0.1.0"
authors = ["pacher <paul.pacher@oenb.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
crossterm = {version = "0.17" }
regex = "1"
lazy_static = "1.4.0"