[package]
name = "opl"
version = "0.1.1"
authors = ["pacher <paul.pacher@oenb.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
hyper = {version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
crossterm = {version = "0.19" }
regex = "1"
scraper="0.12"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json= "1"
chrono = "0.4"
